--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,25 +1,31 @@
 name: Simple CI/CD for Spring Boot
-on:
- push:
-  branches:
-   -master
-jobs:
- build:
-  runs-on: windows-latest
-  steps:
-   -name:Checkout code
-    uses: actions/checkout@v4
-  -name:Set up JDK17
-  uses: actions/setup-java@v4
-  with:
-    java-version:'17'
 
-  -name: Build and test with Maven
-  run:mvn clean install -DskipTests-false
-  -name: Archive JAR
-   uses: actions/upload-artifact@v4
-   with:
-    name: spring-boot-app #
-    path: target/*.jar
--name: Print success message
-  run: echo ""Build ans tests completed successfully!"
+on:
+  push:
+    branches:
+      - master  # Correction de l'indentation et de l'espace autour du tiret
+
+jobs:
+  build:
+    runs-on: windows-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+
+      - name: Build and test with Maven
+        run: mvn clean install -DskipTests=false  # Correction de l'espace entre -DskipTests et =false
+
+      - name: Archive JAR
+        uses: actions/upload-artifact@v4
+        with:
+          name: spring-boot-app
+          path: target/*.jar
+
+      - name: Print success message
+        run: echo "Build and tests completed successfully!"  # Correction de la syntaxe de l'écho et des guillemets
