--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -3,7 +3,7 @@ name: Simple CI/CD for Spring Boot
 on:
   push:
     branches:
-      - master  # Correction de l'indentation et de l'espace autour du tiret
+      - master
 
 jobs:
   build:
@@ -13,13 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK17
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
+          distribution: 'temurin'
 
       - name: Build and test with Maven
-        run: mvn clean install -DskipTests=false  # Correction de l'espace entre -DskipTests et =false
+        run: mvn clean install -DskipTests=false
 
       - name: Archive JAR
         uses: actions/upload-artifact@v4
@@ -28,4 +29,4 @@ jobs:
           path: target/*.jar
 
       - name: Print success message
-        run: echo "Build and tests completed successfully!"  # Correction de la syntaxe de l'écho et des guillemets
+        run: echo "Build and tests completed successfully!"
